--- a/index.html
+++ b/index.html
@@ -2,5 +2,5 @@
 <html lang="en">
 <head></head>
 <body></body>
-<script src="https://qwertyytheartist.github.io/artificial-idiot/main.js"></script>
+<script src="main.js"></script>
 </html>
